--- a/css/main.css
+++ b/css/main.css
@@ -2,24 +2,50 @@ html {
   font-family: 'Open Sans', sans-serif;
 }
 
+body {
+  margin: 0px;
+}
+
+#about-me {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  max-width: 60%;
+  padding-left: 1%;
+  padding-right: 1%;
+  height: 100vh;
+  align-content: center;
+  justify-content: center;
+  font-size: 25px;
+}
+
+#background-pic {
+  opacity: 0.2;
+  position: absolute;
+  top: 0px;
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+}
+
 #name-header {
   font-family: 'Julius Sans One', sans-serif;
-  position: absolute;
-  font-size: 50px;
+  font-size: 50px;;
 }
 
 #img-container {
   position: absolute;
+  max-width: 50%;
   width: 100%;
   height: 100%;
+  top: 0px;
   right: 0px;
   overflow: hidden;
 }
 
 .img-circle {
   border-radius: 50%;
-  width: 100vh;;
-  height: 100vh;
+  height: 100%;
   position: absolute;
   right: -25vh;
 }
@@ -61,7 +87,10 @@ html {
 }
 
 #flickr {
-  border: 1px solid pink;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #FC329B;
+  #border-image: linear-gradient(to top left, blue, #FC329B) 1;
   right: 59vh;
   top: 76vh;
 }
